# Security-Code-Auditor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: sample_report.md
rules/: semgrep-c-cpp.yml
scripts/: build_binary.sh
src/auditor/: __init__.py  cli.py  config.py  pipeline.py
src/auditor/ingestion/: __init__.py  repo_scanner.py
src/auditor/llm/: __init__.py  gemini_client.py  prompts.py
src/auditor/report/: __init__.py  generator.py  models.py
src/auditor/static_analysis/: __init__.py  cppcheck_runner.py  semgrep_runner.py
tests/: __init__.py  test_ingestion.py  test_llm.py  test_report.py  test_static_analysis.py
tests/fixtures/: vulnerable_sample.c
